--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "node --max_old_space_size=8192 ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build — prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
