--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "node server.js",
     "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
